# stock-market-agent

./: .gitignore  README.md  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/quant_copilot/: calendar.py  cli.py  clock.py  config.py  db.py  logging_setup.py  models.py  paths.py  rate_limit.py
backend/quant_copilot/agents/: budget.py  citations.py  claude_client.py  conviction.py  decisions.py  fundamental.py  macro.py  news.py  orchestrator.py  pricing.py  schemas.py  technical.py
backend/quant_copilot/analysis/: circuit.py  fundamentals_eval.py  indicators.py  liquidity.py  macro.py  patterns.py
backend/quant_copilot/api/: app.py  deps.py  schemas.py
backend/tests/: conftest.py  test_agent_schemas.py  test_analysis_macro.py  test_api_backtest.py  test_api_cors.py  test_api_decisions.py  test_api_health.py  test_api_research.py  test_api_watchlist.py  test_archival.py  test_backtest_engine.py  test_backtest_metrics.py  test_backup.py  test_budget.py  test_calendar.py  test_circuit.py  test_citations.py  test_claude_client.py  test_cli.py  test_clock.py  test_config.py  test_conviction.py  test_corporate_actions.py  test_data_layer.py  test_data_macro.py  test_decisions.py  test_fallback_sources.py  test_filings.py  test_fundamental_agent.py  test_fundamentals.py  test_fundamentals_eval.py  test_indicators.py  test_liquidity.py  test_macro_agent.py  test_news.py  test_news_agent.py  test_ohlc.py  test_orchestrator.py  test_outcomes_job.py  test_patterns.py  (+13 more)
(+66 files in other folders)
