[project]
name = "quant-copilot"
version = "0.1.0"
description = "Personal agentic AI research assistant for Indian equity markets"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "nsepython>=2.9",
    "nsetools>=1.0.11",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "pyarrow>=16.1",
    "pandas-ta>=0.3.14b0",
    "rapidfuzz>=3.9",
    "apscheduler>=3.10",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dateutil>=2.9",
    "tenacity>=8.4",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.5",
    "freezegun>=1.5",
    "respx>=0.21",
]

[project.scripts]
qc = "quant_copilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter
